--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">Hundreds of routes. One membership.</h1>
 							<div class="sub-wrapper">
-							<p class="sub-headline">Launching Spring 2016, ClimbCard gives you unrestricted access to Toronto’s best indoor rock climbing gyms.</p>
+							<p class="sub-headline">Launching Summer 2016, ClimbCard gives you unrestricted access to Toronto’s best indoor rock climbing gyms.</p>
 							</div>
 
 							<%= render "layouts/partials/mailchimp_form" %>
