--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -98,7 +98,9 @@
 					<div class="row">
 						<div class="col-md-6 col-md-push-6">
 							<h1>ClimbCard is Fast, Easy, &amp; Convenient!</h1>
-							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing.</p>
+							<p>As climbers, we understand your desire to push the limits and pursue new challenges. With so many great facilities in the GTA you shouldn’t be confined to one gym.
+							</p>
+							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing. Its that simple!</p>
 							<div class="os-btn-group">
 								<div class="os-btn">
 									<i class="fa fa-apple"></i>Apple Wallet</div>
