updated copy and colors

--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -54,7 +54,7 @@
 							</div>
 							<div class="feature-content text-center">
 								<h5>Intuitive Technology</h5>
-								<p>Our digital membership card seamlessly integrates with an intuitive cloud based platform designed to improve customer interactions and business insights.</p>
+								<p>Leverage our cloud based platform designed to improve customer interactions and business insights.</p>
 							</div>
 						</div>
 
