--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -486,9 +486,9 @@ Buttons
     display: inline-block;
     padding: 1em 2em;
     border-radius: 3px;
-    color: #fff;
+    color: #23CE6B;
     font-size: 16px;
-    background: #23CE6B;
+    background: #0D1836;
 }
 .learn-btn:hover, .learn-btn:focus {
     border-color: #73d0da;
@@ -893,7 +893,7 @@ FAQ
   }
 
   .section-title {
-    color: #23CE6B;
+    color: #171738;
     text-align: center;
     margin-bottom:40px;
     font-size: 24px;
@@ -1307,7 +1307,7 @@ footer {
   }
 
   .social-icons a {
-    color: #23CE6B;
+    color: #fff;
   }
 
 }
