--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -22,9 +22,9 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown">Hundreds of routes. One community.</h1>
+							<h1 class="animated fadeInDown">Indoor Climbing For Less!</h1>
 							<div class="sub-wrapper">
-							<p class="sub-headline">Launching Fall 2016, ClimbCard is your key to discovering new rock climbing gyms.</p>
+							<p class="sub-headline">Launching Fall 2016, ClimbCard enables you to explore a diverse network of indoor climbing gyms for up to 50% off daily rates.</p>
 							</div>
 
 							<%= render "layouts/partials/mailchimp_form" %>
@@ -99,17 +99,46 @@
 						<div class="col-md-6 col-md-push-6">
 							<h1>How it Works</h1>
 							
-
-							<p>As climbers, we understand your desire to push the limits and pursue new challenges. With so many great facilities in the GTA you shouldn’t be confined to one gym.
+							<p>We’ve partnered with 12 of Toronto’s best indoor climbing gyms to offer you exclusive discounts on daily rates.
 							</p>
-							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing. Its that simple!</p>
+							
+							<div class="steps clearfix">
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">1</strong>
+									</span>
+									<p class="instruction">Select an amount to get started: <span>$50</span>, <span>$100</span> or <span>$150<span></p>
+								</div>
+								
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">2</strong>
+									</span>
+									<p class="instruction">Your ClimbCard will arrive by e-mail</p>
+								</div>
+								
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">3</strong>
+									</span>
+									<p class="instruction">Present at participating gyms</p>
+								</div>
+
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">4</strong>
+									</span>
+									<p class="instruction">Start Climbing!</p>
+								</div>
+								</div>
+							</div>
 							
 
-							<div class="os-btn-group">
-								<div class="os-btn">
-									<i class="fa fa-apple"></i>Apple Wallet</div>
-							</div>
-						</div>
+
 						<div class="col-md-6 col-md-pull-6">
 							<div class="iphone-wrapper text-center">
 								<%= image_tag "shopify_iphone.png", class: "wp3 wallet-card", alt: "Climbcard Wallet iOS" %>
