--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -22,9 +22,9 @@
 					</div>
 					<div class="row hero-content">
 						<div class="col-md-12">
-							<h1 class="animated fadeInDown">Hundreds of routes. One community.</h1>
+							<h1 class="animated fadeInDown">Indoor Climbing For Less!</h1>
 							<div class="sub-wrapper">
-							<p class="sub-headline2">ClimbCard is a digital passport that allows you to explore our network of gyms at a discount.</p>
+							<p class="sub-headline2">ClimbCard enables you to explore a diverse network of indoor climbing gyms for up to 50% off daily rates.</p>
 							</div>
 
 							<!-- <div data-embed_type="product" data-shop="climberscard.myshopify.com" data-product_name="ClimbCard" data-product_handle="gift-card" data-has_image="false" data-display_size="compact" data-redirect_to="checkout" data-buy_button_text="BUY NOW" data-buy_button_out_of_stock_text="Out of Stock" data-buy_button_product_unavailable_text="Unavailable" data-button_background_color="23ce6b" data-button_text_color="ffffff" data-product_modal="false" data-product_title_color="000000" data-next_page_button_text="Next page"></div>
@@ -34,7 +34,7 @@
 							<noscript><a href="https://climberscard.myshopify.com/cart/26320492102:1" target="_blank">Buy ClimbCard</a></noscript> -->
 							
 							<div class="buy_wrapper">
-								<a class="buy_now" href="https://climberscard.myshopify.com/cart/26320492102:1" target="_blank">BUY NOW</a>
+								<a class="buy_now" href="https://climbcard-co.myshopify.com/cart/26261638019:1" target="_blank">BUY NOW</a>
 							</div>
 
 						</div>
@@ -108,21 +108,50 @@
 							<h1>How it Works</h1>
 							
 
-							<p>As climbers, we understand your desire to push the limits and pursue new challenges. With so many great facilities in the GTA you shouldn’t be confined to one gym.
+							<p>We’ve partnered with 12 of Toronto’s best indoor climbing gyms to offer you exclusive discounts on daily rates.
 							</p>
-							<p>Once enrolled as a ClimbCard member, you will recieve a digital membership card. Simply visit any of our partner gyms, present your ClimbCard and start climbing. Its that simple!</p>
 							
-							<!-- <ol>
-								<li>Create account</li>
-								<li>Add your ClimbCard to Apple Wallet</li>
-								<li>Exchange credits at partner rock climbing gyms for exclusive rates</li>
-								<li>Discover new gyms and get climbing</li>
-							</ol> -->
+							<div class="steps clearfix">
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">1</strong>
+									</span>
+									<p class="instruction">Select an amount to get started: <span>$50</span>, <span>$100</span> or <span>$150<span></p>
+								</div>
+								
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">2</strong>
+									</span>
+									<p class="instruction">Your ClimbCard will arrive by e-mail</p>
+								</div>
+								
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">3</strong>
+									</span>
+									<p class="instruction">Present at participating gyms</p>
+								</div>
 
-							<div class="os-btn-group">
-								<div class="os-btn">
-									<i class="fa fa-apple"></i>Apple Wallet</div>
+								<div class="step">
+									<span class="fa-stack fa-1x">
+	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
+	  							<strong class="fa-stack-1x">4</strong>
+									</span>
+									<p class="instruction">Start Climbing!</p>
+								</div>
+
 							</div>
+							
+							<div class="os-btn-group clearfix">
+								<div class="buy_wrapper">
+								<a class="buy_now" href="https://climbcard-co.myshopify.com/cart/26261638019:1" target="_blank">BUY NOW</a>
+							</div>
+							</div>
+
 						</div>
 						<div class="col-md-6 col-md-pull-6">
 							<div class="iphone-wrapper text-center">
