--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -225,13 +225,13 @@
 					<div class="col-md-6">
 						<div class="faq-block">
 						<h5>Does this include rental equipment?</h5>
-						<p>No, rental equipment is not included in the membership. In order to get started we recommend purchasing a harness, climbing shoes and a chalk bag.</p>
+						<p>No, rental equipment is not included. In order to get started we recommend buying a harness, climbing shoes and a chalk bag.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="faq-block">
-						<h5>Can I put my membership on hold?</h5>
-						<p>Certainly! We understand that you may need to take a break. Simply put your membership on hold and resume once you’re ready.</p>
+						<h5>Does my ClimbCard expire?</h5>
+						<p>No! Your ClimbCard will remain active as long as you have a balance.</p>
 						</div>
 					</div>
 				</div>
