--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -239,7 +239,7 @@
 					<div class="col-md-6">
 						<div class="faq-block">
 						<h5>Does this include rental equipment?</h5>
-						<p>No, rental equipment is not included in the membership. In order to get started we recommend buying a harness, climbing shoes and a chalk bag.</p>
+						<p>No, rental equipment is not included. In order to get started we recommend buying a harness, climbing shoes and a chalk bag.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
