changes from ClimbCard to Climbr

--- a/app/views/layouts/gift-card-delivery.html
+++ b/app/views/layouts/gift-card-delivery.html
@@ -97,7 +97,7 @@
 																							<tr>
 																								<td class="kmTextContent" valign="top" style='border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;color:#222;font-family:"Helvetica Neue", Arial;font-size:14px;line-height:130%;text-align:left;padding-top:9px;padding-bottom:9px;padding-left:18px;padding-right:18px;'>
 																									<p style="margin:0;padding-bottom:1em;text-align: center;"><span style="font-size:20px;"><strong></strong></span></p>
-																									<p style="margin:0;padding-bottom:0;text-align: center;"><span style="font-size:20px;"><strong>Here is Your ClimbCard!</strong></span></p>
+																									<p style="margin:0;padding-bottom:0;text-align: center;"><span style="font-size:20px;"><strong>Here is Your Climbr Card!</strong></span></p>
 																								</td>
 																							</tr>
 																						</tbody>
@@ -114,7 +114,7 @@
 																						<tbody>
 																							<tr>
 																								<td class="kmTextContent" valign="top" style='border-collapse:collapse;mso-table-lspace:0;mso-table-rspace:0;color:#222;font-family:"Helvetica Neue", Arial;font-size:14px;line-height:130%;text-align:left;padding-top:0px;padding-bottom:20px;padding-left:18px;padding-right:18px;'>
-																									<p style="margin:0;padding-bottom:1em;padding-top:1em">Thank you for purchasing a ClimbCard. We hope you have a great time exploring our growing network of partner gyms. </p>
+																									<p style="margin:0;padding-bottom:1em;padding-top:1em">Thank you for purchasing a Climbr Card. We hope you have a great time exploring our growing network of partner gyms. </p>
 																									<p style="margin:0;padding-bottom:0;margin-bottom:20px">To get started simply open your ClimbCard in Apple Wallet or through your browser using the links below.</p>
 																								</td>
 																							</tr>
