--- a/app/views/layouts/partials/_home_footer.html.erb
+++ b/app/views/layouts/partials/_home_footer.html.erb
@@ -4,7 +4,7 @@
 					<div class="col-md-6 col-sm-6 col-xs-12">
 						<div class="logo-wrap">
 							<%= link_to root_path do %>
-							<%= image_tag "new_white_logo.png", class: "img-responsive footer-logo", alt: "Start your climb" %>
+							<%= image_tag "climbr_logo.png", class: "img-responsive footer-logo", alt: "Start your climb" %>
 							<% end %>
 						</div>
 					</div>
@@ -14,9 +14,9 @@
 								<%= link_to "Want To Be A Partner?", partner_path %>
 							</li>
 							<div class="navicon social-icons">
-								<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-								<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-								<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+								<a href="https://twitter.com/climbrapp"><i class="fa fa-twitter"></i></a>
+								<a href="https://facebook.com/climbrapp"><i class="fa fa-facebook"></i></a>
+								<a href="https://www.instagram.com/climbrapp/"><i class="fa fa-instagram"></i>
 								</a>
 						</div>
 						</ul>
