--- a/app/views/layouts/partials/_partner_footer.html.erb
+++ b/app/views/layouts/partials/_partner_footer.html.erb
@@ -9,17 +9,14 @@
 						</div>
 					</div>
 					<div class="col-md-6 col-sm-6 col-xs-12">
-						<ul class="footer-nav text-right">
-								<li>
-									<%= link_to "Want To Be A Partner?", partner_path %>
-								</li>
+						<div class="footer-nav text-right">
 							<div class="navicon social-icons">
 								<a href="https://twitter.com/climbrapp"><i class="fa fa-twitter"></i></a>
 								<a href="https://facebook.com/climbrapp"><i class="fa fa-facebook"></i></a>
 								<a href="https://www.instagram.com/climbrapp/"><i class="fa fa-instagram"></i>
 								</a>
 						</div>
-						</ul>
+						</div>
 					</div>
 				</div>
 			</div>
