--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -10,13 +10,13 @@
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<%= link_to root_path do %>
-									<%= image_tag "new_white_logo.png", class: "img-box", alt: "ClimbCard Logo" %>
+									<%= image_tag "climbr_logo.png", class: "img-box", alt: "Climbr Logo" %>
 								<% end %>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons clearfix">
-							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+							<a href="https://twitter.com/climbrapp"><i class="fa fa-twitter"></i></a>
+							<a href="https://facebook.com/climbrapp"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/climbrapp/"><i class="fa fa-instagram"></i>
 						</a>
 						</div>
 					</div>
@@ -24,7 +24,7 @@
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">Indoor Climbing For Less!</h1>
 							<div class="sub-wrapper">
-							<p class="sub-headline">Launching Fall 2016, ClimbCard enables you to explore a diverse network of indoor climbing gyms for up to 50% off daily rates.</p>
+							<p class="sub-headline">Launching Fall 2016, Climbr enables you to explore a diverse network of indoor climbing gyms for up to 50% off daily rates.</p>
 							</div>
 
 							<%= render "layouts/partials/mailchimp_form" %>
@@ -116,7 +116,7 @@
 	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
 	  							<strong class="fa-stack-1x">2</strong>
 									</span>
-									<p class="instruction">Your ClimbCard will arrive by e-mail</p>
+									<p class="instruction">Your Climbr will arrive by e-mail</p>
 								</div>
 								
 								<div class="step">
@@ -141,7 +141,7 @@
 
 						<div class="col-md-6 col-md-pull-6">
 							<div class="iphone-wrapper text-center">
-								<%= image_tag "shopify_iphone.png", class: "wp3 wallet-card", alt: "Climbcard Wallet iOS" %>
+								<%= image_tag "climbr_iphone.png", class: "wp3 wallet-card", alt: "Climbr Wallet iOS" %>
 								</div>
 						</div>
 						
@@ -211,13 +211,13 @@
 					<div class="col-md-6">
 						<div class="faq-block">
 						<h5>Are there any restrictions as to when I can climb?</h5>
-						<p>With ClimbCard, you can climb at any of our partner gyms with no restrictions. Regardless of if you prefer to climb morning, afternoon or night, ClimbCard gives you full access to your favourite climbing gyms.</p>
+						<p>With Climbr, you can climb at any of our partner gyms with no restrictions. Regardless of if you prefer to climb morning, afternoon or night, Climbr gives you full access to your favourite climbing gyms.</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="faq-block">
 						<h5>Can I boulder, top-rope and lead climb?</h5>
-						<p>Absolutely! All of the the ClimbCard partner gyms have a variety of walls sure to challenge climbers of every skill-set. Belay tests may be required to climb on some walls.</p>
+						<p>Absolutely! All of the the Climbr partner gyms have a variety of walls sure to challenge climbers of every skill-set. Belay tests may be required to climb on some walls.</p>
 						</div>
 					</div>
 				</div>
@@ -230,8 +230,8 @@
 					</div>
 					<div class="col-md-6">
 						<div class="faq-block">
-						<h5>Does my ClimbCard expire?</h5>
-						<p>No! Your ClimbCard will remain active as long as you have a balance.</p>
+						<h5>Does my Climbr expire?</h5>
+						<p>No! Your Climbr will remain active as long as you have a balance.</p>
 						</div>
 					</div>
 				</div>
@@ -270,7 +270,7 @@
 		
 		<!-- Footer -->
 
-		<%= render "layouts/partials/beta_footer" %>
+		<%= render "layouts/partials/home_footer" %>
 		
 		<!-- / Footer -->
 
