--- a/app/views/pages/live.html.erb
+++ b/app/views/pages/live.html.erb
@@ -10,13 +10,13 @@
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<%= link_to live_path do %>
-									<%= image_tag "new_white_logo.png", class: "img-box", alt: "ClimbCard Logo" %>
+									<%= image_tag "climbr_logo.png", class: "img-box", alt: "Climbr Logo" %>
 								<% end %>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons clearfix">
-							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+							<a href="https://twitter.com/climbrapp"><i class="fa fa-twitter"></i></a>
+							<a href="https://facebook.com/climbrapp"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/climbrapp/"><i class="fa fa-instagram"></i>
 						</a>
 						</div>
 					</div>
@@ -24,7 +24,7 @@
 						<div class="col-md-12">
 							<h1 class="animated fadeInDown">Indoor Climbing For Less!</h1>
 							<div class="sub-wrapper">
-							<p class="sub-headline2">ClimbCard enables you to explore a diverse network of indoor climbing gyms for up to 50% off daily rates.</p>
+							<p class="sub-headline2">Climbr enables you to explore a diverse network of indoor climbing gyms for up to 50% off daily rates.</p>
 							</div>
 
 							<!-- <div data-embed_type="product" data-shop="climberscard.myshopify.com" data-product_name="ClimbCard" data-product_handle="gift-card" data-has_image="false" data-display_size="compact" data-redirect_to="checkout" data-buy_button_text="BUY NOW" data-buy_button_out_of_stock_text="Out of Stock" data-buy_button_product_unavailable_text="Unavailable" data-button_background_color="23ce6b" data-button_text_color="ffffff" data-product_modal="false" data-product_title_color="000000" data-next_page_button_text="Next page"></div>
@@ -34,7 +34,7 @@
 							<noscript><a href="https://climberscard.myshopify.com/cart/26320492102:1" target="_blank">Buy ClimbCard</a></noscript> -->
 							
 							<div class="buy_wrapper">
-								<a class="buy_now" href="https://climbcard-co.myshopify.com/cart/26261638019:1" target="_blank">BUY NOW</a>
+								<a class="buy_now" href="https://climbr.myshopify.com/cart/27234401094:1" target="_blank">BUY NOW</a>
 							</div>
 
 						</div>
@@ -125,7 +125,7 @@
 	  							<i class="fa fa-circle-thin fa-stack-2x"></i>
 	  							<strong class="fa-stack-1x">2</strong>
 									</span>
-									<p class="instruction">Your ClimbCard will arrive by e-mail</p>
+									<p class="instruction">Your Climbr will arrive by e-mail</p>
 								</div>
 								
 								<div class="step">
@@ -148,14 +148,14 @@
 							
 							<div class="os-btn-group clearfix">
 								<div class="buy_wrapper">
-								<a class="buy_now" href="https://climbcard-co.myshopify.com/cart/26261638019:1" target="_blank">BUY NOW</a>
+								<a class="buy_now" href="https://climbr.myshopify.com/cart/27234401094:1" target="_blank">BUY NOW</a>
 							</div>
 							</div>
 
 						</div>
 						<div class="col-md-6 col-md-pull-6">
 							<div class="iphone-wrapper text-center">
-								<%= image_tag "shopify_iphone.png", class: "wp3 wallet-card", alt: "Climbcard Wallet iOS" %>
+								<%= image_tag "climbr_iphone.png", class: "wp3 wallet-card", alt: "Climbr Wallet iOS" %>
 								</div>
 						</div>
 						
@@ -225,13 +225,13 @@
 					<div class="col-md-6">
 						<div class="faq-block">
 						<h5>Are there any restrictions as to when I can climb?</h5>
-						<p>As a ClimbCard user you can take advantage of our preferred pricing anytime. Simply visit any of our partner gyms, present your card and start climbing!</p>
+						<p>As a Climbr user you can take advantage of our preferred pricing anytime. Simply visit any of our partner gyms, present your card and start climbing!</p>
 						</div>
 					</div>
 					<div class="col-md-6">
 						<div class="faq-block">
 						<h5>Can I boulder, top-rope and lead climb?</h5>
-						<p>Absolutely! All of the the ClimbCard partner gyms have a variety of walls sure to challenge climbers of every skill-set.</p>
+						<p>Absolutely! All of the the Climbr partner gyms have a variety of walls sure to challenge climbers of every skill-set.</p>
 						</div>
 					</div>
 				</div>
@@ -244,8 +244,8 @@
 					</div>
 					<div class="col-md-6">
 						<div class="faq-block">
-						<h5>Does my ClimbCard expire?</h5>
-						<p>No! Your ClimbCard will remain active as long as you have a balance.</p>
+						<h5>Does my Climbr expire?</h5>
+						<p>No! Your Climbr will remain active as long as you have a balance.</p>
 						</div>
 					</div>
 				</div>
@@ -254,7 +254,7 @@
 
 		<section class="callToAction group">
 			<div class="col-md-12">
-			<h1 class="section-title text-center">Sign up for the latest ClimbCard news!</h1>
+			<h1 class="section-title text-center">Sign up for the latest Climbr news!</h1>
 			<section class="user-subscribe">
 				<div id="mc_embed_signup">
 				<form action="//climbcard.us12.list-manage.com/subscribe/post?u=62b58dfeef74782cefec4dfcc&amp;id=894976712f" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate text-center" target="_blank" novalidate>
