--- a/app/views/pages/partner.html.erb
+++ b/app/views/pages/partner.html.erb
@@ -5,13 +5,13 @@
 					<div class="row nav-wrapper">
 						<div class="col-md-6 col-sm-6 col-xs-6 text-left">
 								<%= link_to root_path do %>
-									<%= image_tag "new_white_logo.png", class: "img-box", alt: "ClimbCard Logo" %>
+									<%= image_tag "climbr_logo.png", class: "img-box", alt: "Climbr Logo" %>
 								<% end %>
 						</div>
 						<div class="col-md-6 col-sm-6 col-xs-6 text-right navicon social-icons clearfix">
-							<a href="https://twitter.com/climbcard"><i class="fa fa-twitter"></i></a>
-							<a href="https://facebook.com/climbcard"><i class="fa fa-facebook"></i></a>
-							<a href="https://www.instagram.com/climbcard/"><i class="fa fa-instagram"></i>
+							<a href="https://twitter.com/climbrapp"><i class="fa fa-twitter"></i></a>
+							<a href="https://facebook.com/climbrapp"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.instagram.com/climbrapp/"><i class="fa fa-instagram"></i>
 						</a>
 						</div>
 					</div>
@@ -144,6 +144,6 @@
 
 <!-- Footer -->
 
-<%= render "layouts/partials/live_footer" %>
+<%= render "layouts/partials/partner_footer" %>
 
 <!-- / Footer -->
