--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
 <!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <html lang="en" class="no-js">
 <head>
-  <title>ClimbCard</title>
+  <title>Climbr</title>
   <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= stylesheet_link_tag 'application', 'https://fonts.googleapis.com/css?family=Nunito:400,300,700'%>
   <%= favicon_link_tag 'favicon.ico' %>
@@ -15,9 +15,9 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<meta name="description" content="ClimbCard" />
+		<meta name="description" content="Climbr" />
 		<meta name="keywords" content="rock climbing, bouldering, rope, lead rope, belay" />
-		<meta name="author" content="ClimbCard" />
+		<meta name="author" content="Climbr" />
 
 		<!-- Facebook and Twitter integration -->
 		<meta property="og:title" content=""/>
